nav menu overflow fixed

--- a/client/src/Components/Nav/Nav.scss
+++ b/client/src/Components/Nav/Nav.scss
@@ -133,6 +133,7 @@ nav {
    transform: translateX(100%);
    display: flex;
    justify-content: center;
+   overflow: hidden;
    z-index: 9998;
 
    .nav-links {
